[gd_scene load_steps=11 format=3 uid="uid://2arpc0v4vxbd"]

[ext_resource type="PackedScene" uid="uid://c83vlx50waes5" path="res://xrassets/left_quest2_controller.tscn" id="1"]
[ext_resource type="PackedScene" path="res://xrassets/right_quest2_controller.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bcuooalxbfh1l" path="res://xrassets/4f_moved_hand_l.glb" id="3"]
[ext_resource type="Script" path="res://avatars/gxtplayeravatar/LPVRPlayerAvatar.gd" id="4"]

[sub_resource type="BoxMesh" id="1"]
size = Vector3(0.2, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(0.105882, 0.188235, 0.509804, 1)

[sub_resource type="SphereMesh" id="3"]
radius = 0.14
height = 0.3
radial_segments = 24
rings = 24

[sub_resource type="StandardMaterial3D" id="4"]
albedo_color = Color(0.741176, 0.623529, 0.584314, 1)

[sub_resource type="CylinderShape3D" id="5"]
margin = 0.02
height = 0.05
radius = 0.4

[sub_resource type="CylinderMesh" id="6"]
top_radius = 0.4
bottom_radius = 0.4
height = 0.05
radial_segments = 32
rings = 0

[node name="LPVRPlayerAvatar" type="Node3D"]
script = ExtResource("4")

[node name="HeadCam" type="CSGMesh3D" parent="."]
mesh = SubResource("1")
material = SubResource("2")

[node name="skullcomponent" type="CSGMesh3D" parent="HeadCam"]
transform = Transform3D(0.9, 0, 0, 0, 1, 0, 0, 0, 0.98, 0, -0.051, 0.085)
mesh = SubResource("3")
material = SubResource("4")

[node name="LeftAppendage" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.262, -0.31, -0.21)

[node name="4f_moved_hand_l" parent="LeftAppendage" instance=ExtResource("3")]

[node name="left_quest2_controller" parent="LeftAppendage" instance=ExtResource("1")]

[node name="left_quest2_controller_world" parent="LeftAppendage/left_quest2_controller" index="1"]
show_rest_only = true

[node name="RightAppendage" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.261993, -0.309998, -0.216488)

[node name="4f_moved_hand_l" parent="RightAppendage" instance=ExtResource("3")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="right_quest2_controller" parent="RightAppendage" instance=ExtResource("2")]

[node name="right_quest2_controller_world" parent="RightAppendage/right_quest2_controller" index="0"]
show_rest_only = true
bones/0/position = Vector3(0, 0, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/position = Vector3(0, 0, 0)
bones/1/rotation = Quaternion(0, 0, 0, 1)
bones/1/scale = Vector3(1, 1, 1)
bones/2/position = Vector3(0, 0, 0)
bones/2/rotation = Quaternion(0, 0, 0, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(0, 0, 0)
bones/3/rotation = Quaternion(0, 0, 0, 1)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0, 0, 0)
bones/4/rotation = Quaternion(0, 0, 0, 1)
bones/4/scale = Vector3(1, 1, 1)
bones/5/position = Vector3(0, 0, 0)
bones/5/rotation = Quaternion(0, 0, 0, 1)
bones/5/scale = Vector3(1, 1, 1)

[node name="PaddleBody" type="CharacterBody3D" parent="RightAppendage"]
transform = Transform3D(0.752357, 0.658755, 0, -0.658755, 0.752357, 0, 0, 0, 1, 0.00118214, -0.00156346, -0.425429)
visible = false
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightAppendage/PaddleBody"]
transform = Transform3D(0.704795, 0.709411, 0, -0.709411, 0.704795, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("5")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightAppendage/PaddleBody/CollisionShape3D"]
mesh = SubResource("6")

[editable path="LeftAppendage/4f_moved_hand_l"]
[editable path="LeftAppendage/left_quest2_controller"]
[editable path="RightAppendage/4f_moved_hand_l"]
[editable path="RightAppendage/right_quest2_controller"]
